# cfldog

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
include/: GenerateDog.h  cflTime.hpp
src/: CMakeLists.txt  GenerateDog.cpp  cflMD5.h
src/GeneralKey/: CMakeLists.txt  GeneralKey.cpp
src/GeneralLicense/: CMakeLists.txt  GeneralLicense.cpp
test/: CMakeLists.txt  cfldogtest.cpp
